<resources>
    <string name="app_name">System Faktur</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello fragment</string>
    <string name="s_pref_file">com.example.invoices.sh_preference_file</string>
    <string name="s_pref_login_status">com.example.invoices.sh_preference_login_status</string>
    <string name="s_pref_login_message">com.example.invoices.sh_preference_message</string>
    <string name="s_pref_id">sh_preference_id</string>
    <string name="s_pref_username">sh_preference_username</string>
    <string name="s_pref_name">sh_preference_name</string>
    <string name="s_pref_surname">sh_preference_surname</string>
    <string name="s_pref_email">sh_preference_email</string>
    <string name="s_pref_company">sh_preference_company</string>
    <string name="s_pref_address">sh_preference_address</string>
    <string name="s_pref_city">sh_preference_city</string>
    <string name="s_pref_nip">sh_preference_nip</string>
    <string name="s_pref_regon">sh_preference_regon</string>
    <string name="s_pref_jwt">sh_preference_jwt</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">System Faktur</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Faktury Sprzedaży</string>
    <string name="menu_slideshow">Dodaj Fakturę Sprzedaży</string>
    <string name="menu_tools">Klienci</string>
    <string name="menu_share">Profil</string>
    <string name="menu_invoicep">Faktury Zakupu</string>
    <string name="menu_invoicep_add">Dodaj Fakturę Zakupu</string>
    <string name="menu_supplier_add">Dodaj Dostawcę</string>
    <string name="menu_supplier">Dostawcy</string>
    <string name="menu_send">Dodaj Klienta</string>
    <string name="warto_brutto">Wartość Brutto</string>
    <string name="warto_vat">Wartość Vat</string>
    <string name="warto_netto">Wartość Netto</string>
    <string name="termin_p_atno_ci">Termin Płatności</string>
    <string name="dodaj_faktur">Dodaj fakturę</string>
    <string name="nazwa_u_ytkownika">Nazwa Użytkownika</string>
    <string name="imi">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="email">Email</string>
    <string name="firma">Firma</string>
    <string name="zapisz">Zapisz</string>
    <string name="ulica">Ulica</string>
    <string name="regon">REGON</string>
    <string name="nip">NIP</string>
    <string name="miasto">Miasto</string>
    <string name="data_us_ugi">Data usługi</string>
    <string name="data_wystawienia">Data wystawienia</string>

</resources>
