<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.invoices.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.invoices.ui.invoice.InvoiceFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_invoice" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.invoices.ui.invoiceadd.InvoiceAddFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_invoiceadd" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.invoices.ui.customer.CustomerFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.invoices.ui.account.AccountFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.invoices.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/invoicep"
        android:name="com.example.invoices.ProfileFragment"
        android:label="@string/menu_invoicep"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/supplier"
        android:name="com.example.invoices.ProfileFragment"
        android:label="@string/menu_invoicep_add"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/supplier_add"
        android:name="com.example.invoices.ProfileFragment"
        android:label="@string/menu_invoicep_add"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/invoicep_add"
        android:name="com.example.invoices.ProfileFragment"
        android:label="@string/menu_invoicep_add"
        tools:layout="@layout/fragment_profile" />

</navigation>